spacing fix

--- a/src/CheckboxField/styles.pcss
+++ b/src/CheckboxField/styles.pcss
@@ -17,6 +17,7 @@
 
 .checkbox {
   /* Reset anything that could peek out or interfere with dimensions, but don't use display:none for WCAG */
+  position: absolute;
   overflow: hidden;
   margin: 0;
   padding: 0;
